<resources>
    <string name="app_name">Indalowater</string>
    <string name="prompt_user">Usuario</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Entrar</string>
    <string name="web_url">www.indalowater.com</string>
    <string name="phone_number">1–800–8351-967</string>
    <string name="title_client_details">Datos del Cliente</string>
    <string-array name="array_mr_mrs">
        <item>Sr.</item>
        <item>Sra.</item>
    </string-array>
    <string-array name="array_states">
        <item>State</item>
        <item>AL</item>
        <item>AK</item>
        <item>AZ</item>
        <item>AR</item>
        <item>CA</item>
        <item>CO</item>
        <item>CT</item>
        <item>DE</item>
        <item>FL</item>
        <item>GA</item>
        <item>HI</item>
        <item>ID</item>
        <item>IL</item>
        <item>IN</item>
        <item>IA</item>
        <item>KS</item>
        <item>KY</item>
        <item>LA</item>
        <item>ME</item>
        <item>MD</item>
        <item>MA</item>
        <item>MI</item>
        <item>MN</item>
        <item>MS</item>
        <item>MO</item>
        <item>MT</item>
        <item>NE</item>
        <item>NV</item>
        <item>NH</item>
        <item>NJ</item>
        <item>NM</item>
        <item>NY</item>
        <item>NC</item>
        <item>ND</item>
        <item>OH</item>
        <item>OK</item>
        <item>OR</item>
        <item>PA</item>
        <item>RI</item>
        <item>SC</item>
        <item>SD</item>
        <item>TN</item>
        <item>TX</item>
        <item>UT</item>
        <item>VT</item>
        <item>VA</item>
        <item>WA</item>
        <item>WV</item>
        <item>WI</item>
        <item>WY</item>
    </string-array>
    <string name="item_name">Nombre</string>
    <string name="item_last_name">Apellido</string>
    <string name="item_phone">Tlf.</string>
    <string name="item_email">Email</string>
    <string name="item_city">Ciudad</string>
    <string name="item_state">Estado</string>
    <string name="item_zip_code">Código Postal</string>
    <string name="action_send">Enviar</string>
    <string name="name1">name1</string>
    <string name="name2">name2</string>
    <string name="lastName1">lastName1</string>
    <string name="lastName2">lastName2</string>
    <string name="phone">phone</string>
    <string name="email">email</string>
    <string name="city">city</string>
    <string name="state">state</string>
    <string name="zipCode">zipCode</string>
    <string name="gender1">gender1</string>
    <string name="gender2">gender2</string>
    <string name="title_welcome">Bienvenidos</string>
    <string name="prompt_catherinne">, estamos aquí por las siguientes razones:</string>
    <string name="prompt_reason_1">Hazerle una demostración completamente gratis y sin compromiso.</string>
    <string name="prompt_reason_2">Para pedirle opinión de nuestros equipos.</string>
    <string name="prompt_reason_3">Para que me ayude a seguir trabajando, recomendándome a sus amigos.</string>
    <string name="prompt_reason_4">Ofrecerle a usted o a sus conocidos la posibilidad de disfrutar de nuestros productos y sus beneficios.</string>
    <string name="action_continue">Continuar</string>
    <string name="title_how_are_we">¿Quiénes somos?</string>
    <string name="title_where_are_we">¿En dónde estamos?</string>
    <string name="title_social_responsability">Responsabilidad Social</string>
    <string name="title_products">Productos</string>
    <string name="title_demostration">Demostración</string>
    <string name="title_indalo_rob">Indalo ROB</string>
    <string name="title_indalo_3">Indalo 3</string>
    <string name="title_indalo_central">Indalo Central</string>
    <string name="title_testimonies">Testimonios</string>
    <string name="title_indalo_rob_health_1">Mejora tu salud y belleza con Agua Alcalina Indalo</string>
    <string name="title_indalo_rob_health_2">Beneficios:</string>
    <string name="list_indalo_rob_health_1">
        &#8226; Máximas propiedades de hidratación.
        \n&#8226; Potente antioxidante.
        \n&#8226; Propiedades antiedad.
        \n&#8226; Mejora la elasticidad natural de la piel.
        \n&#8226; Su piel será más suave, más sana, más limpia y sin arrugas.
        \n&#8226; Elimina toxinas, impurezas y aceites de la piel.
        \n&#8226; Desintoxica.
    </string>
    <string name="list_indalo_rob_health_2">
        &#8226; Un componente clave en la pérdida de peso.
        \n&#8226; Aumenta tus niveles de energía.
        \n&#8226; Mejora la digestión.
        \n&#8226; Neutraliza la acidez de tu cuerpo.
        \n&#8226; Aumenta la recolección de nutrientes.
    </string>
    <string name="title_purification">Purificación</string>
    <string name="title_optimization">Optimización</string>
    <string name="title_purification_optimization">Purificación y Optimización</string>
    <string name="title_microprocessor">Microprocesador</string>
    <string name="prompt_technolgy">Tecnología</string>
    <string name="body_purification_optimization_1">Depuración del agua por ósmosis Inversa (agua Acida).</string>
    <string name="body_purification_optimization_2">Remineralización: Devuelve al agua los 16 minerales hidrosolubles que el cuerpo absorbe de manera positiva (agua Neutral).</string>
    <string name="body_purification_optimization_3">Alcalinización: máxima hidratación y antioxidante (agua Alcalina pH 8 a 8.5).   </string>
    <string name="list_purification_optimization_1">
        &#8226; Bicarbonato
        \n&#8226; Cloro
        \n&#8226; Calcio
        \n&#8226; Cloruro
        \n&#8226; Cobre
        \n&#8226; Cromo
        \n&#8226; Fósforo
        \n&#8226; Hierro
    </string>
    <string name="list_purification_optimization_2">
        &#8226; Magnesio
        \n&#8226; Manganeso
        \n&#8226; Molibdeno
        \n&#8226; Potasio
        \n&#8226; Selenio
        \n&#8226; Vanadio
        \n&#8226; Yodo\n
        \n&#8226; Zinc
    </string>
    <string name="list_purification_optimization_3">
        &#10004; Contiene propiedades antioxidantes.
        \n&#10004; Puede ayudar a mejorar la digestión saludable.
        \n&#10004; Puede ayudar a fortalecer la densidad ósea.
        \n&#10004; Ayuda a perder peso de una manera saludable.
        \n&#10004; Contiene propiedades hidratantes.
        \n&#10004; Una fuente de energía vital.
        \n&#10004; Elimina las células cancerosas.
    </string>
    <string name="title_cloro">Cloro</string>
    <string name="title_electroprecipitation">Electro precipitación</string>
    <string name="title_absorption">Absorción</string>
    <string name="body_demostration">¿Cuál es la calidad del agua que consumes?</string>
    <string name="title_tds">TDS (Total de Solidos en Dispersión)</string>
    <string name="body_tds">Mide en ppm (Partes Por Millón) la cantidad de solidos disueltos en el agua y que son “Invisibles” al ojo humano.\n\n
        Sin embargo muchos de ellos son muy perjudiciales a la salud como el Plomo, Metales Pesados, Nitratos, Nitritos, Fosfatos, Cloro y sus derivados, Isotopos radioactivos. Etc.</string>
    <string name="title_tds_table">TABLA DE DUREZA</string>
    <string name="title_tds_2">PRESENCIA DE CLORO</string>
    <string name="list_tds">
        &#8226; El “OTO” es un reactivo que tiñe de amarillo el Cloro para hacerlo visible.
        \n&#8226; El Cloro es un VENENO añadido por las autoridades al agua para matar bacterias y microbios.
        \n&#8226; El Cloro esta íntimamente relacionado con muchas enfermedades, incluidos los canceres de vejiga y colon.
        \n&#8226; El Cloro debería ser retirado del agua, antes de ser consumida.
    </string>
    <string name="title_tds_3">ELECTRO PRECIPITACION</string>
    <string name="body_tds_2">En nuestra agua existen una significativa cantidad de disolventes, nitratos, nitritos, amonio, isotopos radiactivos, metales pesados, plomo, residuos de fármacos y antibióticos, hormonas, bacterias, virus, parásitos, y muchos más.\n\n
        Sin embargo al no ser visibles a simple vista nos es fácil olvidarnos de su existencia, por este medio los haremos visibles.</string>
    <string name="title_tds_4">ABSORCIÓN DE CONTAMINANTES POR LOS ALIMENTOS</string>
    <string name="list_tds_2">
        &#8226; El Cloro desaparece. Es absorbido por los alimentos.
        \n&#8226; Otros contaminantes que tiene el agua, son absorbidos por los alimentos
    </string>
    <string name="title_technology">El Sistema de Purificación y Optimización de agua más avanzado del mundo.</string>
    <string name="title_economy">Economía</string>
    <string name="title_video">Video</string>
    <string name="body_technology_2">El microprocesador <b>Indalo ROB</b> hace mucho más que simplemente verse bien</string>
    <string name="reason_technology_2_1">Supervisa la calidad del agua producida, indicando el TDS del agua.</string>
    <string name="reason_technology_2_2">Advierte cuando los filtros tiene que ser cambiados o su mantenimiento.</string>
    <string name="reason_technology_2_3">Controla el proceso que está siendo llevado a cabo por el equipo.</string>
    <string name="reason_technology_2_4">Desconecta el equipo si hay alguna pérdida de agua.</string>
    <string name="title_installation">Instalación</string>
    <string name="title_mantenance">Mantenimiento</string>
    <string name="title_installation_mantenance">Instalación y Mantenimiento</string>
    <string name="title_filter_1">Filtro Carbón ST-33</string>
    <string name="title_filter_2">Filtro Carbón ST-CT0</string>
    <string name="title_filter_3">Filtro Sedimento ST-05</string>
    <string name="list_filter_1">
        &#8226; Filtro de 1 micra. \n
        &#8226; Carbón granular activado con Plata, de concha de coco 100% natural y orgánico. \n
        &#8226; Desinfectante poderoso para eliminar las bacterias y otros organismos. \n
        &#8226; Retiene metales pesados, Cloro y otros subproductos cancerígenos y compuestos resultantes de la descomposición de vegetales o algas y el metabolismo animal.
    </string>
    <string name="list_filter_2">
        &#8226; Filtro de 1 micra. \n
        &#8226; Carbón activado en bloque, de concha de coco, 100% natural y orgánico. \n
        &#8226; Aumenta la capacidad de retención de productos nocivos para la salud como el Cloro y sus derivados; y el arsénico.
    </string>
    <string name="list_filter_3">
        &#8226; Filtro de 5 micrones.
        \n&#8226; Elimina los sedimentos en el agua.
        \n&#8226; Retiene: arena, grava y óxido, entre otras partículas en suspensión.
    </string>
    <string name="body_economy">¿Cuanto gastamos en agua?</string>
    <string name="title_health_1">, ¿sabe como afecta su piel, cabello, y salud en general la Cal y otros elementos en el agua que consume?</string>
    <string name="reason_health_1_1">El cabello tiene aspecto seco, sin brillo y quebradizo. La piel reseca y se arruga más rápido.</string>
    <string name="reason_health_1_2">En personas con piel delicada o alergícas puede desarrollar dermatitis atópica.</string>
    <string name="reason_health_1_3">La pañalitis e irritación es usual por los detergentes residuales que quedan en la ropa.</string>
    <string name="reason_health_1_4">La pañalitis e irritación es usual por los detergentes residuales que quedan en la ropa.</string>
    <string name="reason_health_1_5">Químicos, pesticidas, bacterias y microorganismos, pueden causar enfermedades y cancer.</string>
    <string name="reason_health_1_6">Un agua con demasiado contenido en carbonato cálcico puede provocarnos cálculos.</string>
    <string name="title_health_2">, la salud de su hogar también se afecta por usar agua no purificada y optimizada</string>
</resources>